<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="name">Name</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank You!!</string>
    <string name="total">"Total: "</string>
    <string name="noOfCoffee">"Quantity: "</string>
    <string name="toAddChocolate">"Add Chocolate? "</string>
    <string name="toAddWhippedCream">"Add Whipped Cream? </string>
    <string name="nameOfPerson">"Name: </string>
</resources>